<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QKidKid</string>
    <string name="mulai">mulai</string>
    <string name="keluar">keluar</string>
    <string name="mulaii">MULAI</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="skor_kamu">Skor Kamu</string>
    <string name="_100">100</string>
    <string name="home">HOME</string>
    <string name="skor_tinggi">SKOR TINGGI</string>
    <string name="soal">soal</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="skor">SKOR :</string>
    <string name="_0">0</string>
    <string name="mulai_lagi">Mulai Lagi</string>
    <string name="skip">SKIP</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
</resources>
