<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    tools:context=".soal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="670dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />


    <LinearLayout
        android:id="@+id/lineskor"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/color1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skor"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvSkor"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linesoal"
        android:layout_width="396dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineskor"
        app:layout_constraintVertical_bias="0.64">

        <TextView
            android:id="@+id/soal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/soal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pilgan"
        android:layout_width="395dp"
        android:layout_height="247dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linesoal">


        <Button
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/a"
            android:textSize="22sp" />

        <Button
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/b"
            android:textSize="22sp" />

        <Button
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/c"
            android:textSize="22sp" />

        <Button
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/d"
            android:textSize="22sp" />

        <Button
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/e"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        android:textSize="24sp"
        android:onClick="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilgan" />


</android.support.constraint.ConstraintLayout>