<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    tools:context=".skor">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="580dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="205dp"
        android:layout_height="112dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.126">

        <TextView
            android:id="@+id/kamu"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/skor_kamu"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skor"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linebutton"
        android:layout_width="250dp"
        android:layout_height="151dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btn_home"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="250dp"
            android:layout_height="53dp"
            android:layout_marginBottom="25dp"
            android:background="@color/color2"
            android:onClick="Home"
            android:text="@string/mulai_lagi"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keluar"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="250dp"
            android:layout_height="57dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/keluar"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>