<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="172dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="580dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="255dp"
        android:layout_height="157dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.734">

        <Button
            android:id="@+id/btn_mulai"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="252dp"
            android:layout_height="57dp"
            android:background="@color/color3"
            android:onClick="mulai"
            android:text="@string/mulai"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_tinggi"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="252dp"
            android:layout_height="57dp"
            android:layout_marginTop="44dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/skor_tinggi"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>